Fixing some issues

--- a/horizontal-panel/index.html
+++ b/horizontal-panel/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/flash-black.png"/>
   </head>
-  <body style="background-image: url('img/background-gray.jpg');">
+  <body>
     <div class="main">
       <div class="presenter">
         <div class="logo">
