--- a/acme-cart/index.html
+++ b/acme-cart/index.html
@@ -14,11 +14,9 @@
       <header>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 acme">
-                <div class="col-xs-2 acme-logo">
-                  <img src="img/logo.png" alt="Acme"/>
-                </div>
-                <div class="col-xs-10 acme-brand">
+            <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4 acme">
+                <img src="img/logo.png" class="img acme-logo" alt="Acme"/>
+                <div class="acme-brand">
                   <h1>Acme</h1>
                   <h6>business trustmark</h6>
                 </div>
